# CG_Labs_fork

./: CMakeLists.txt
shaders/EDAF80/: phong.frag  phong.vert  skybox.frag  skybox.vert  water.frag  water.vert
shaders/EDAN35/: accumulate_lights.frag  fill_gbuffer.frag
shaders/project/: phong.frag  phong.vert  shader.frag  shader.vert
src/EDAF80/: CelestialBody.cpp  assignment1.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  interpolation.cpp  parametric_shapes.cpp  parametric_shapes.hpp
src/EDAN35/: assignment2.cpp
src/core/: helpers.cpp
src/project/: CMakeLists.txt  fluidSystem.cpp  fluidSystem.hpp  mTools.cpp  mTools.hpp  project.cpp  project.hpp
